--- a/src/App.css
+++ b/src/App.css
@@ -15,15 +15,15 @@
 }
 
 .game-header {
-  padding: 20px;
+  padding: 30px;
 }
 
 .game-board {
-  margin-top: 40px;
+  margin-top: 0px;
 }
 
 .options-panel {
-  padding: 20px;
+  padding: 30px;
 }
 
 .option {
@@ -38,13 +38,13 @@
 
 
 .cell {
-  width: 40px;
-  height: 40px;
+  width: 38px;
+  height: 38px;
   vertical-align: top;
   background: #444444;
   color: #ffffff;
-  border: 1px white;
-  margin: 1px;
+  border: 1px solid white;
+  margin: 0px;
   border-radius: 2px;
   text-align: center;
   font-weight: bold;
@@ -52,11 +52,11 @@
 }
 
 .cell:hover {
-  background: #1a73e9;
+  background: #345ed3;
 }
 
-.cellPressed, .cellPressed:hover {
-  background: rgb(16, 73, 179);
+.cellPressed, .cellPressed:hover, .resetButton:hover {
+  background: #26408a;
 }
 
 .cellIsMine, .cellIsMine:hover {
@@ -105,13 +105,12 @@
 .resetButton {
   width: 160px;
   border-radius: 5px;
-  background: #1a73e9;
+  background: #345ed3;
   font-size: 0.9em;
+  margin-top: 10px;
 }
 
-.resetButton:hover {
-  background: rgb(16, 73, 179);
-}
+
 
 .successResetButton {
   background: #24ad11;
