--- a/src/App.css
+++ b/src/App.css
@@ -24,37 +24,28 @@
 
 .options-panel {
   padding: 30px;
+  text-align: right;
+  margin-right: 40%;
 }
 
-.option-button {
-  width:  20px;
-  height: 20px;
-  border: none;
-  border-radius: 5px;
-  font-weight: bold;
-  font-size: 0.9em;
-  text-align: center;
-  vertical-align: center;
-  color: white;
+.options-title {
+  padding-bottom: 10px;
+  margin-right: 10px;
 }
 
 .option {
-  display: inline-block;
-  margin-top: 10px;
+  display: block;
+  padding: 10px;
 }
 
-.option-title {
-  display: inline;
-  margin-right: 20px;
-}
 
 .input {
   margin-left: 10px;
 }
 
 .cell {
-  width: 38px;
-  height: 38px;
+  width: 36px;
+  height: 36px;
   vertical-align: top;
   background: #444444;
   color: #ffffff;
